--- a/RegistryAnalyzer.csproj
+++ b/RegistryAnalyzer.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="Helpers\RegistryHelper.cs" />
     <Compile Include="Helpers\VirusTotalHelper.cs" />
     <Compile Include="Program.cs" />
